--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,61 +1,338 @@
-.boxCarta {
-    display: flex;
-    flex-direction: column;
-    /* justify-content: center; */
-    align-items: center;
-    align-content: center;
-    justify-items: center;
-    height: 550px;
-    width: 400px;
-    background-color: #000000;
-    border-radius: 18px;
+body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.boxInterna {
-    width: 370px;
-    background-color: rgb(250, 223, 183);
-    height: 490px;
-    margin-top: 15px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border-bottom-left-radius: 40px;
-    border-bottom-right-radius: 40px;
-    display: flex;
-    align-content: center;
-    flex-direction: column;
+.blackBackground {
+  width: 417px;
+  height: 585px;
+  position: relative;
+  top: 300px;
+  background: #030303;
+  -webkit-box-shadow: 15px 13px 32px rgba(0, 0, 0, 0.25);
+          box-shadow: 15px 13px 32px rgba(0, 0, 0, 0.25);
+  border-radius: 12px;
 }
 
-.titleDiv {
-    background-color: rgb(250, 242, 231);
-    display: flex;
-    width: 97%;
-    justify-content: space-around;
-    margin-top: 10px;
-    filter: drop-shadow(0px 0px 3px black);
-    border-radius: 50px;
-    margin-left: 4px;
-    border: solid 1px rgb(71, 62, 57);
+.textureBg2 {
+  position: absolute;
+  width: 387px;
+  height: 483px;
+  left: 15px;
+  top: 15px;
+  background: url(../img/cardTextureBg.png);
+  border-radius: 11px;
+  border-bottom-right-radius: 50px;
+  border-bottom-left-radius: 50px;
 }
 
-.name {
-    font-size: 20px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+.contornoLeveTitleBox {
+  position: absolute;
+  width: 378px;
+  height: 47px;
+  left: 3px;
+  top: 10px;
+  background: #FFFDF7;
+  border-radius: 19px;
+  z-index: 1000;
 }
 
-.custoMana {
-    margin-top: 8px;
-    margin-bottom: 5px;
+.titleBox {
+  position: absolute;
+  width: 375px;
+  height: 43px;
+  left: 1px;
+  top: 2px;
+  background: url(d10ruj1-f46ed9f9-96ef-4560-bb45-7aea9ce1f796.jpg);
+  border: 2px solid #292929;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  border-radius: 19px;
 }
 
-.divImgPersonagem {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    width: 93%;
-    margin-left: 12px;
-    margin-top: 3px;
-    border: solid 2px rgb(71, 62, 57);
-    filter: drop-shadow(0px 0px 1px black);
+.characterName {
+  position: absolute;
+  width: 151px;
+  height: 38px;
+  left: 10px;
+  top: -15px;
+  font-family: Times New Roman;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 32px;
+  color: #000000;
 }
+
+.numberMana {
+  position: absolute;
+  width: 27px;
+  height: 27px;
+  left: 280px;
+  top: 5px;
+  border-radius: 100px;
+  background: #C4C4C4;
+  -webkit-box-shadow: -1px 1px 1px #000000;
+          box-shadow: -1px 1px 1px #000000;
+}
+
+.numberManaCost {
+  position: absolute;
+  width: 19px;
+  height: 20px;
+  left: 8px;
+  top: -36px;
+  font-family: Times New Roman;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 37px;
+  color: #000000;
+}
+
+.manaCostSimbol1 {
+  position: absolute;
+  left: 310px;
+  top: 6px;
+  width: 27px;
+  height: 27px;
+}
+
+.manaCostSimbol2 {
+  position: absolute;
+  left: 340px;
+  top: 6px;
+  width: 27px;
+  height: 27px;
+}
+
+.contornoLeveImg {
+  position: absolute;
+  width: 367px;
+  height: 252px;
+  left: 10px;
+  top: 45px;
+  z-index: 0;
+  background: #FFFDF7;
+  -webkit-box-shadow: -2px 0px 3px rgba(0, 0, 0, 0.95);
+          box-shadow: -2px 0px 3px rgba(0, 0, 0, 0.95);
+}
+
+.characterImg {
+  position: absolute;
+  width: 357px;
+  height: 239px;
+  left: 5px;
+  top: 10px;
+  background: url(serraangel.png);
+  border: 2px solid #000000;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-filter: drop-shadow(-1px 0px 0px rgba(0, 0, 0, 0.67));
+          filter: drop-shadow(-1px 0px 0px rgba(0, 0, 0, 0.67));
+}
+
+.contornoLeveTypeInformation {
+  position: absolute;
+  width: 378px;
+  height: 47px;
+  left: 5px;
+  top: 295px;
+  background: #FFFDF7;
+  border-radius: 19px;
+  z-index: 1000;
+}
+
+.typeInformation {
+  position: absolute;
+  width: 374px;
+  height: 43px;
+  left: 2px;
+  top: 2px;
+  background: url(d10ruj1-f46ed9f9-96ef-4560-bb45-7aea9ce1f796.jpg);
+  border: 2px solid #292929;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 19px;
+}
+
+.type {
+  position: absolute;
+  width: 188px;
+  height: 36px;
+  left: 8px;
+  top: -15px;
+  font-family: Times New Roman;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 25px;
+  color: #000000;
+}
+
+.expansionSymbol {
+  position: absolute;
+  width: 33px;
+  height: 31px;
+  left: 330px;
+  top: 5px;
+}
+
+.contornoLeveTextArea {
+  position: absolute;
+  width: 362px;
+  height: 195px;
+  left: 12px;
+  top: 337px;
+  z-index: 1;
+  background: #FFFDF7;
+}
+
+.textArea {
+  position: absolute;
+  width: 357px;
+  height: 193px;
+  left: 2px;
+  top: 0px;
+  background: url(d10ruj1-f46ed9f9-96ef-4560-bb45-7aea9ce1f796.jpg);
+  border: 1px solid rgba(85, 85, 85, 0.54);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: -3px 0px 0px -1px rgba(0, 0, 0, 0.67);
+          box-shadow: -3px 0px 0px -1px rgba(0, 0, 0, 0.67);
+}
+
+.habilities {
+  position: relative;
+  width: 189px;
+  height: 31px;
+  left: 6px;
+  top: 20px;
+  margin-top: 0;
+  font-family: Times New Roman;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 25px;
+  color: #000000;
+}
+
+.textInformations {
+  position: absolute;
+  width: 343px;
+  height: 114px;
+  left: 5px;
+  top: 50px;
+  font-family: Times New Roman;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 20px;
+  color: #000000;
+}
+
+.contornoLevePower {
+  position: absolute;
+  width: 78px;
+  height: 37px;
+  left: 305px;
+  top: 505px;
+  z-index: 2000;
+  background: #FFFDF7;
+  border-radius: 10px;
+}
+
+.power {
+  position: absolute;
+  width: 76px;
+  height: 35px;
+  left: 1px;
+  top: 1px;
+  background: #FFF7E7;
+  border: 2px solid rgba(0, 0, 0, 0.57);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.26), inset -1px 3px 1px rgba(44, 43, 43, 0.68);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.26), inset -1px 3px 1px rgba(44, 43, 43, 0.68);
+  border-radius: 9px;
+}
+
+.powerNumber {
+  position: absolute;
+  width: 41px;
+  height: 36px;
+  left: 15px;
+  top: -30px;
+  font-family: Times New Roman;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 30px;
+  z-index: 300000;
+  color: #000000;
+}
+
+.collectionNumber {
+  position: absolute;
+  width: 80px;
+  height: 13px;
+  left: 30px;
+  top: 543px;
+  font-family: Asul;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 9px;
+  line-height: 111.49%;
+  color: #ffffff;
+}
+
+.seiLa {
+  position: absolute;
+  width: 120px;
+  height: 13px;
+  left: 30px;
+  top: 555px;
+  font-family: Asul;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 7px;
+  line-height: 111.49%;
+  color: #ffffff;
+}
+
+.copyright {
+  position: absolute;
+  width: 138px;
+  height: 7px;
+  left: 285px;
+  top: 555px;
+  font-family: Athiti;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 7px;
+  line-height: 111.49%;
+  color: #FFFFFF;
+}
+
+.card {
+  -webkit-transition: 1s ease;
+  transition: 1s ease;
+}
+
+.card:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+/*# sourceMappingURL=style.css.map */
